# persistent-memory-agent

./: README.md  app.py  chat_history.txt  config.py  main.py  main_agent.py  memories.json  pyproject.toml  requirements.txt
Archieve/: chat_history.txt  openai_based_agent.py
memory_store_database/user_1/: semantic_memory_meta.json  semantic_memory_vecs.npy
memory_store_database/user_11/: semantic_memory_meta.json  semantic_memory_vecs.npy
memory_store_database/user_15/: semantic_memory_meta.json  semantic_memory_vecs.npy
memory_store_database/user_2/: semantic_memory_meta.json  semantic_memory_vecs.npy
memory_store_database/user_3/: semantic_memory_meta.json  semantic_memory_vecs.npy
memory_store_database/user_30/: semantic_memory_meta.json  semantic_memory_vecs.npy
memory_store_database/user_50/: semantic_memory_meta.json  semantic_memory_vecs.npy
models/: memory.py
nodes/: call_model.py  classifiers.py  extract_delete_entity.py  personal_info_extractor.py
notebooks/: 02_agent_with_info_check.ipynb  03_final_agent_with_deletion.ipynb  long-term-memory-agent.ipynb  prototype.ipynb  with_delete_memory.ipynb
schema/: state.py
services/: long_memory_store.py  memory_manager.py
utils/: memory_manager.py  memory_store.py  prompts.py  route.py
