[project]
name = "persistent-memory-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.72",
    "langchain-google-genai>=2.1.8",
    "langchain-openai>=0.3.28",
    "langgraph>=0.6.1",
    "langgraph-checkpoint-sqlite>=2.0.11",
    "langgraph-cli[inmem]>=0.3.6",
    "langgraph-prebuilt>=0.6.1",
    "langgraph-sdk>=0.2.0",
    "notebook>=7.4.4",
    "openai>=1.97.1",
    "scikit-learn>=1.7.1",
    "trustcall>=0.0.39",
]
